src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  height: 100vh;
}

html {
  background: 
    /* top, transparent red, faked with gradient */ 
    linear-gradient(
      rgba(255, 255, 255, 0.90), 
      rgba(255, 255, 255, 0.90)
    ),
    /* bottom, image */
    url('./images/background.jpg') right;
    height: 100vh;
}

#root {
  height: 100vh;
}

.test {
  border: 1px solid tomato
}

.text-small {
  font-size: .6em;
}

.clicky {
  cursor: pointer;
  user-select: none;
}

.blocky {
  display: block;
}

.inline {
  display: inline;
}

.buttonify {
  margin: 8px;
  display: inline-block;
  background-color: white;
  border-color: #9e9e9e;
  border-width: 1px;
  color: #363636;
  cursor: pointer;
  justify-content: center;
  padding-bottom: calc(0.375em - 1px);
  padding-left: 0.75em;
  padding-right: 0.75em;
  padding-top: calc(0.375em - 1px);
  text-align: center;
  white-space: nowrap;
}

.multi-line {
  white-space: pre-line;
}

.link + .link {
  margin-left: 1em;
}

